--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -27,12 +27,14 @@
 <div class="container">
   <div class="col-md-12">
     <h1>News Feed</h1>
+    <button ng-click="home.twitter()">Twitter Trends</button>
+    <button ng-click="home.gTrends()">Google Trends</button>
     <div ng-repeat="articleBody in allArticles">
       <h2><a href="{{ articleBody.href }}">{{ articleBody.text }}</a></h2>
       <p>{{ articleBody.body | limitTo:500 }}<p>
-      <button ng-click="showSentiment = true" class="btn-warning">Show Sentiment</button>
-      <h4 ng-show="showSentiment"class="sentimentType">Sentiment: {{ articleBody.sentiment.type }}<h4>
-      <h4 ng-show="showSentiment"class="sentimentScore">Score: {{ articleBody.sentiment.score }}<h4>
+      <button btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false" class="btn-warning" ng-model="showSentiment">Show Sentiment</button>
+      <h4 ng-show="showSentiment === true"class="sentimentType">Sentiment: {{ articleBody.sentiment.type }}<h4>
+      <h4 ng-show="showSentiment === true"class="sentimentScore">Score: {{ articleBody.sentiment.score }}<h4>
     </div>
     <!-- <div ng-repeat="article in articles | orderBy: 'topic'">
       <h2>{{ article.title }}</h2>
