--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,8 @@
           <script src="app/home/home.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/trends/trends.controller.js"></script>
+          <script src="app/trends/trends.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
