--- a/client/app/trends/trends.html
+++ b/client/app/trends/trends.html
@@ -10,10 +10,12 @@
       <img src="{{trend.property3.src">
     </div>
     <div ng-show="newsData">
-      <h2><a href="{{ newsData.href }}">{{ newsData.text }}</a></h2>
-      <p>{{ newsData.body | limitTo:500 }}<p>
-      <button btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false" class="btn-warning" ng-model="showSentiment">Show Sentiment</button>
-      <h4 ng-show="showSentiment === true"class="sentimentType">Sentiment: {{ newsData.sentiment.type }}<h4>
-      <h4 ng-show="showSentiment === true"class="sentimentScore">Score: {{ newsData.sentiment.score }}<h4>
+      <div ng-repeat="outlet in newsData">
+        <h2><a href="{{ outlet.href }}">{{ outlet.text }}</a></h2>
+        <p>{{ outlet.body | limitTo:500 }}<p>
+        <button btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false" class="btn-warning" ng-model="showSentiment">Show Sentiment</button>
+        <h4 ng-show="showSentiment === true"class="sentimentType">Sentiment: {{ outlet.sentiment.type }}<h4>
+        <h4 ng-show="showSentiment === true"class="sentimentScore">Score: {{ outlet.sentiment.score }}<h4>
+      </div>
     </div>
 </div>
