--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/d3/d3.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
@@ -68,6 +69,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/allGoogle/allGoogle.controller.js"></script>
+          <script src="app/allGoogle/allGoogle.js"></script>
           <script src="app/edit/edit.controller.js"></script>
           <script src="app/edit/edit.js"></script>
           <script src="app/home/home.controller.js"></script>
