--- a/client/app/allGoogle/allGoogle.html
+++ b/client/app/allGoogle/allGoogle.html
@@ -9,11 +9,20 @@
       <p><a href="{{trend.property1.href}}">Google Results</a></p>
       <img src="{{trend.property3.src}}">
     </div>
+    <bars-chart chart-data="myData"></bars-chart>
+    <nvd3-scatter-chart
+        data="exampleData"
+        id="exampleId"
+        width="550"
+        height="400"
+        yAxisTickFormat="yAxisTickFormatFunction()"
+        xAxisTickFormat="xAxisTickFormatFunction()">
+        <svg></svg>
+    </nvd3-scatter-chart>
     <div ng-if="newsData">
     <h1>Topic: {{ newsData[11].topic }}</h1>
     <wiki></wiki>
-    <bars-chart chart-data="myData"></bars-chart>
-      <div ng-repeat="outlet in newsData | limitTo:10">
+      <div ng-repeat="outlet in newsData.cleanData | limitTo:10">
         <h2><a href="{{ outlet.href }}">{{ outlet.text }}</a></h2>
         <p>{{ outlet.body | limitTo:500 }}<p>
         <p>{{ outlet.href }}<p>
