--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,6 +9,30 @@
 </header>
 
 <div class="container">
+  <h1>SVG below</h1>
+  <svg>
+<!--     <rect x="0" y="0" width="500" height="50"/> -->
+<!--     <circle cx="250" cy="25" r="25"/> -->
+<!--     <ellipse cx="250" cy="25" rx="100" ry="25"/> -->
+    <line x1="0" y1="0" x2="500" y2="50" stroke="black"/>
+    <text x="250" y="25">Easy-peasy</text>
+    <text x="250" y="150" font-family="sans-serif"
+ font-size="25" fill="gray">Easy-peasy</text>
+    <circle cx="25" cy="25" r="22"
+     fill="yellow" stroke="orange" stroke-width="5"/>
+<!--      <rect x="0" y="0" width="30" height="30" fill="purple"/>
+     <rect x="20" y="5" width="30" height="30" fill="blue"/>
+     <rect x="40" y="10" width="30" height="30" fill="green"/>
+     <rect x="60" y="15" width="30" height="30" fill="yellow"/>
+     <rect x="80" y="20" width="30" height="30" fill="red"/> -->
+     <circle cx="25" cy="25" r="20" fill="rgba(128, 0, 128, 1.0)"/>
+     <circle cx="50" cy="25" r="20" fill="rgba(0, 0, 255, 0.75)"/>
+     <circle cx="75" cy="25" r="20" fill="rgba(0, 255, 0, 0.5)"/>
+     <circle cx="100" cy="25" r="20" fill="rgba(255, 255, 0, 0.25)"/>
+     <circle cx="125" cy="25" r="20" fill="rgba(255, 0, 0, 0.1)"/>
+  </svg>
+  <h1>Scatter Chart below</h1>
+<!--   <scatter-chart scatter-data="myScatterData"></scatter-chart> -->
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
