--- a/client/app/allGoogle/allGoogle.html
+++ b/client/app/allGoogle/allGoogle.html
@@ -28,6 +28,16 @@
       <h1>Topic: {{ newsData.cleanData[11].topic }}</h1>
       <button btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false" class="btn-success" ng-model="showChart">Show Chart</button>
       <div ng-if="showChart === true"class="chartType">
+        <form class="form-inline">
+          <!-- entity -->
+          <select class="form-control">
+            <option ng-repeat="obj in newsData.sentimentData">{{obj.entity}}</option>
+          </select>
+          <!-- news source -->
+          <select class="form-control">
+            <option ng-repeat="article in newsData.cleanData">{{article.href}}</option>
+          </select>
+        </form>
         <nvd3-scatter-chart
             data="newsData.display"
             id="sentimentComparison"
@@ -38,7 +48,7 @@
             showYaxis="false"
             forceX="[-1,1]"
             showLegend="true"
-            transitionDuration="1000"
+            transitionDuration="1000">
             <svg id="chart" width="960" height="500"></svg>
         </nvd3-scatter-chart>
       </div>
