--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -33,6 +33,10 @@
   </svg>
   <h1>Scatter Chart below</h1>
 <!--   <scatter-chart scatter-data="myScatterData"></scatter-chart> -->
+  <h1>Multiselect Dropdown below</h1>
+  <div>
+    <div ng-dropdown-multiselect="" options="example1data" selected-model="example1model"></div>
+  </div>
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
