--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,7 @@
       <script src="bower_components/d3/d3.js"></script>
       <script src="bower_components/nvd3/nv.d3.js"></script>
       <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
+      <script src="bower_components/angularjs-dropdown-multiselect/src/angularjs-dropdown-multiselect.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
