--- a/client/app/allGoogle/allGoogle.html
+++ b/client/app/allGoogle/allGoogle.html
@@ -30,10 +30,7 @@
       <div ng-if="showChart === true"class="chartType">
         <form class="form-inline">
           <!-- entity -->
-          <select class="form-control">
-            <label for="entity">Entity</label>
-            <option id="entity" ng-repeat="obj in newsData.sentimentData">{{obj.entity}}</option>
-          </select>
+          <div ng-dropdown-multiselect="" options="newsData.entities" selected-model="sourceModel" extra-settings="fullObj"></div>
           <!-- news source -->
           <div ng-dropdown-multiselect="" options="newsData.sources" selected-model="sourceModel" extra-settings="fullObj"></div>
 
