--- a/client/app/allGoogle/allGoogle.html
+++ b/client/app/allGoogle/allGoogle.html
@@ -21,7 +21,7 @@
       forceX="[-3,3]"
       showLegend="true"
       transitionDuration="1000"
-      tooltipXContent="tooltipXContentFunction()"
+      tooltipContent="tooltipXContentFunction()"
       >
       <svg id="chart" width="960" height="500"></svg>
     </nvd3-scatter-chart>
